# estateiq

./: index.html  manifest.json
backend/: CMakeLists.txt  main.cpp
backend/include/: data_loader.hpp  order_execution.hpp  performance.hpp  portfolio.hpp  risk_manager.hpp  strategy_engine.hpp  types.hpp
backend/src/: data_loader.cpp  order_execution.cpp  performance.cpp  portfolio.cpp  risk_manager.cpp  strategy_engine.cpp
backend/tests/: test_order_execution.cpp  test_performance.cpp  test_portfolio.cpp  test_risk_manager.cpp
data_service/: __init__.py  config.py  requirements.txt
data_service/backtesting/: __init__.py  engine.py  performance.py  report.py
data_service/factors/: __init__.py  alpha.py  factor_model.py  risk_factors.py
data_service/fetchers/: __init__.py  alternative_data.py  base.py  economic_data.py  market_data.py
data_service/ml/: __init__.py  feature_engineering.py  models.py  predictor.py
data_service/realtime/: __init__.py  processor.py  stream.py
data_service/storage/: __init__.py  cache.py  database.py
data_service/strategies/: __init__.py  base.py  mean_reversion.py  ml_strategy.py  momentum.py
data_service/visualization/: __init__.py  charts.py  dashboard.py
data_service/web/: __init__.py  api.py  app.py
